--- a/Data Exploration.Rmd
+++ b/Data Exploration.Rmd
@@ -2,10 +2,84 @@
 title: "Data Exploration"
 author: "Manye Dong"
 date: "2023-11-28"
-output: html_document
+output: github_document
 ---
 
+## Predict the risk of death based on features 1-14
 ```{r}
+library(tidyverse)
 
+knitr::opts_chunk$set(
+  fig.width = 6,
+  fig.asp = .6, 
+  out.width = "90%"
+)
+
+theme_set (theme_minimal() +theme(legend.position = "bottom"))
+
+options(
+  ggplot2.continuous.colour = "viridis", 
+  ggplots.continuous.fill = "viridis"
+)
+
+scale_colour_discrete = scale_colour_viridis_d
+scale_fill_disrete = scale_fill_viridis_d
+
+# import data
+bc_data = read.csv("./Project_2_data.csv") |>
+  janitor::clean_names()
+```
+
+```{r}
+# include a descriptive table with summary statistics for all variables
+
+# continuous data
+conti_var = c("age", "tumor_size", "regional_node_examined","reginol_node_positive", "survival_months")
+bc_data |>
+  select(all_of(conti_var)) |>
+  summary() |>
+  knitr::kable()
+
+# discrete data count number of distinct variables
+
+
+discre_var <- c("race", "marital_status", "t_stage", "n_stage", "x6th_stage", "differentiate", "grade", "a_stage", "estrogen_status", "progesterone_status", "status")
+
+# Function to create a summary table for each variable
+summary_table = function(variable) {
+  counts = table(bc_data[[variable]])
+  summary_df = data.frame(
+    Variable = rep(variable, length(counts)),
+    Value = paste(variable, names(counts), sep = "_"),
+    Count = as.vector(counts)
+  )
+  return(summary_df)
+}
+
+summary_tables = lapply(discre_var, summary_table)
+combined_summary = do.call(rbind, summary_tables) |>
+  knitr::kable()
+print(combined_summary)
+```
+
+```{r}
+# explore the distribution of the outcome and consider potential transformations if necessary
+# Since the purpose is to predict the risk of death based on features 1-14, we are going to fit a model with variables 1-14 as predictors (x) and the survival months as the y value. 
+# look at the original distribution of survival months
+hist(bc_data$survival_months, main = "Distribution of survival months", xlab = "Survival Month")
+
+#try different transformation 
+log_survival = log(bc_data$survival_months)
+hist(log_survival, main = "Distribution of log_transformed survival months", xlab = "log-transformed survival months")
+
+sqrt_survival = sqrt(bc_data$survival_months)
+hist(sqrt_survival, main = "Distribution of sqrt(survival months)", xlab = "sqrt(survival months)")
+
+cubic_survival = sign(bc_data$survival_months)*abs(bc_data$survival_months)^(1/3)
+hist(cubic_survival, main = "Distribution of cubic root(survival months)", xlab = "cubic root(survival months)")
+```
+
+```{r}
+# see if there are any unusual observations and consider them as potential outliers/influential points
 ```
 
