--- a/Data Exploration.Rmd
+++ b/Data Exploration.Rmd
@@ -89,7 +89,7 @@ bc_data |>
 ```
 
 ```{r}
-# examine the marginal distributions and pariwise relationships between variables 
+# examine the marginal distributions and pariwise relationships between variables (e.g., to check to see whether any nonlinearities are immediately obvious)
 # explore several candidate models, and explain why you select your model
 model_all = lm(survival_months ~ age+reginol_node_positive+ regional_node_examined+factor(estrogen_status)+factor(progesterone_status)+tumor_size+factor(a_stage) +factor(grade)+factor(differentiate)+factor(x6th_stage)+factor(n_stage)+factor(t_stage)+factor(marital_status)+factor(race), data = bc_data)
 
