--- a/Data Exploration.Rmd
+++ b/Data Exploration.Rmd
@@ -8,12 +8,9 @@ output: github_document
 ## Predict the risk of death based on features 1-14
 ```{r message = FALSE, echo= FALSE}
 library(tidyverse)
-
-knitr::opts_chunk$set(
-  fig.width = 6,
-  fig.asp = .6, 
-  out.width = "90%"
-)
+library(corrplot)
+library(leaps)
+library(glmnet)
 
 theme_set (theme_minimal() +theme(legend.position = "bottom"))
 
@@ -25,10 +22,48 @@ options(
 scale_colour_discrete = scale_colour_viridis_d
 scale_fill_disrete = scale_fill_viridis_d
 
-# import data
-bc_data = read.csv("./Project_2_data.csv") |>
-  janitor::clean_names()
+
 ```
+
+
+```{r}
+# import data and data cleaning
+bc_data = read.csv("./Project_2_data.csv") |>
+  janitor::clean_names() |> 
+  na.omit() |> 
+  mutate(
+    race = factor(race, levels = 1:3, labels = c("Black","White","Other")),
+    marital_status = factor(marital_status, levels = 1:5,labels = c("Divorced", "Married", "Separated", "Single", "Widowed")),
+    t_stage = factor(t_stage, levels = 1:4,labels = c("T1", "T2", "T3", "T4")),
+    n_stage = factor(n_stage, levels = 1:3,labels = c("N1","N2", "N3")),
+    x6th_stage = factor(x6th_stage, levels = 1:5,labels = c("IIA","IIB","IIIA","IIIB","IIIC")),
+    differentiate = factor(differentiate, levels = 1:4,labels = c("Moderately differentiated","Poorly differentiated","Undifferentiated","Well differentiated")),
+    grade = factor(grade, levels = 1:4,labels = c("1","2","3"," anaplastic; Grade IV")),
+    a_stage = factor(a_stage, levels = 1:2,labels = c("Distant","Regional")),
+    estrogen_status = factor(estrogen_status, levels = 0:1,labels = c("Negative","Positive")),
+    progesterone_status = factor(progesterone_status, levels = 0:1,labels = c("Negative","Positive"))
+    )
+```
+
+
+```{r}
+# Pairwise interaction and Correlation plot
+  
+bc_data |> 
+  select(-status) |> 
+  mutate(across(where(is.factor), as.numeric)) |> 
+  cor() |> 
+  (\(x) corrplot(x, type = "upper", diag = FALSE))()
+
+cor_matrix <- bc_data |> 
+  select(-status) |> 
+  mutate(across(where(is.factor), as.numeric)) |> 
+  cor()
+
+corrplot(cor_matrix, type = "upper", diag = FALSE, tl.cex = 0.5, tl.srt = 45)
+```
+
+
 
 ```{r}
 # include a descriptive table with summary statistics for all variables
@@ -88,7 +123,7 @@ bc_data |>
 
 ```
 
-```{r}
+```{r eval=FALSE}
 # examine the marginal distributions and pariwise relationships between variables (e.g., to check to see whether any nonlinearities are immediately obvious)
 # explore several candidate models, and explain why you select your model
 model_all = lm(survival_months ~ age+reginol_node_positive+ regional_node_examined+factor(estrogen_status)+factor(progesterone_status)+tumor_size+factor(a_stage) +factor(grade)+factor(differentiate)+factor(x6th_stage)+factor(n_stage)+factor(t_stage)+factor(marital_status)+factor(race), data = bc_data)
@@ -96,7 +131,7 @@ model_all = lm(survival_months ~ age+reginol_node_positive+ regional_node_examin
 summary(model_all)
 ```
 
-```{r}
+```{r eval=FALSE}
 # see if there are any unusual observations and consider them as potential outliers/influential points
 
 # detect non normality of outliers, using qq plot
