--- a/Data Exploration.Rmd
+++ b/Data Exploration.Rmd
@@ -32,23 +32,23 @@ bc_data = read.csv("./Project_2_data.csv") |>
   janitor::clean_names() |> 
   na.omit() |> 
   mutate(
-    race = factor(race, levels = 1:3, labels = c("Black","White","Other")),
-    marital_status = factor(marital_status, levels = 1:5,labels = c("Divorced", "Married", "Separated", "Single", "Widowed")),
-    t_stage = factor(t_stage, levels = 1:4,labels = c("T1", "T2", "T3", "T4")),
-    n_stage = factor(n_stage, levels = 1:3,labels = c("N1","N2", "N3")),
-    x6th_stage = factor(x6th_stage, levels = 1:5,labels = c("IIA","IIB","IIIA","IIIB","IIIC")),
-    differentiate = factor(differentiate, levels = 1:4,labels = c("Moderately differentiated","Poorly differentiated","Undifferentiated","Well differentiated")),
-    grade = factor(grade, levels = 1:4,labels = c("1","2","3"," anaplastic; Grade IV")),
-    a_stage = factor(a_stage, levels = 1:2,labels = c("Distant","Regional")),
-    estrogen_status = factor(estrogen_status, levels = 0:1,labels = c("Negative","Positive")),
-    progesterone_status = factor(progesterone_status, levels = 0:1,labels = c("Negative","Positive"))
+    race = factor(race, labels = c("1", "2", "3"), levels = c("Black","White","Other")),
+    marital_status = factor(marital_status, labels = c("1", "2", "3","4","5"),levels = c("Divorced", "Married", "Separated", "Single ", "Widowed")),
+    t_stage = factor(t_stage, labels = c("1", "2", "3","4"),levels = c("T1", "T2", "T3", "T4")),
+    n_stage = factor(n_stage, labels = c("1","2","3"),levels = c("N1","N2", "N3")),
+    x6th_stage = factor(x6th_stage, labels = c("1", "2", "3","4","5"),levels = c("IIA","IIB","IIIA","IIIB","IIIC")),
+    differentiate = factor(differentiate, labels = c("1", "2", "3","4"),levels = c("Moderately differentiated","Poorly differentiated","Undifferentiated","Well differentiated")),
+    grade = factor(grade, labels = c("1", "2", "3","4"),levels = c("1","2","3"," anaplastic; Grade IV")),
+    a_stage = factor(a_stage, labels = c("1","2"),levels = c("Distant","Regional")),
+    estrogen_status = factor(estrogen_status, labels = c("0","1"),levels = c("Negative","Positive")),
+    progesterone_status = factor(progesterone_status, labels = c("0","1"),levels = c("Negative","Positive"))
     )
 ```
 
 
 ```{r}
 # Pairwise interaction and Correlation plot
-  
+
 bc_data |> 
   select(-status) |> 
   mutate(across(where(is.factor), as.numeric)) |> 
