--- a/Data Exploration.Rmd
+++ b/Data Exploration.Rmd
@@ -42,30 +42,33 @@ bc_data = read.csv("./Project_2_data.csv") |>
     a_stage = factor(a_stage, labels = c("1","2"),levels = c("Distant","Regional")),
     estrogen_status = factor(estrogen_status, labels = c("0","1"),levels = c("Negative","Positive")),
     progesterone_status = factor(progesterone_status, labels = c("0","1"),levels = c("Negative","Positive"))
-    )
+    ) |> 
+  select(-status)
 ```
 
 
 ```{r}
 # Pairwise interaction and Correlation plot
-
 bc_data |> 
-  select(-status) |> 
-  mutate(across(where(is.factor), as.numeric)) |> 
-  cor() |> 
-  (\(x) corrplot(x, type = "upper", diag = FALSE))()
+  pairs()
+
 
 cor_matrix <- bc_data |> 
-  select(-status) |> 
   mutate(across(where(is.factor), as.numeric)) |> 
   cor()
 
 corrplot(cor_matrix, type = "upper", diag = FALSE, tl.cex = 0.5, tl.srt = 45)
 ```
 
-
-
 ```{r}
+mult.fit = 
+  lm(survival_months ~ ., data = bc_data)
+
+summary(mult.fit)
+```
+
+
+```{r eval=FALSE}
 # include a descriptive table with summary statistics for all variables
 
 # continuous data
